
*** Much better indentation

    More robust. Nested comments are OK even in xemacs. Still a bit
    slow on big files. 

    indent-region won't touch comments, but indenting comments with
    tab (indent-according-to-mode) will.

*** new coq-insert-tactic and coq-insert-command function

    These two functions allow to insert a tactic or command with
    completion in the mini-buffer.

*** New variables coq-user-commands-db and coq-user-tactics-db

    User defined tactics/commands information.  See C-h v
    coq-syntax-db for syntax. It is not necessary to add your own
    tactics here if you have coq v8.1 (it is not needed by the
    synchronizing/backtracking system). You may however do so for the
    following reasons:

    1 your tactics/commands will be colorized by font-lock

    2 your tactics/commands will be added to the menu and to completion
    when calling coq-insert-tactic/command (see below)

    3 you may define an abbreviation for your tactic/command.

*** automatic insertion of "match...with" for a given type

    This coqide great feature has been added.

*** Local Variables List semi automatic filling

    Local Variables Lists are used to set coq program name and arguments
    persistently for a given file. The menu entry "set coq prog
    persistently" helps you to define or change the values in this list
    (which are store as a comment at the end of the file, see info
    manual at node ((emacs)File Variables).

*** Better font-lock coloration

*** new "queries" menu

*** Adapted error highlighting to x-symbol

*** Response windows shrinking to fit in three window mode

*** Outline mode cleaner




* Summary of Changes for Proof General 3.5 from 3.4

** Generic changes

*** Support for Speedbar and Index menu ("Imenu")

Imenu is an alternative to Function Menu (which has been supported for
some time, but is not built-in to GNU Emacs).  It displays a menu of
named definitions, theorems, etc, in the file and allows quick